fix tab alignment

--- a/app/assets/stylesheets/hera/modules.scss
+++ b/app/assets/stylesheets/hera/modules.scss
@@ -222,7 +222,7 @@ pre {
 }
 
 .tabs-container {
-  margin: 1rem $margin -1px $margin;
+  margin: 1rem $margin -1px 0;
   padding-left: 0.25rem;
   border-bottom: 1px solid transparent;
 
